Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1447

Some functions in CpuInfoUtil.cc don't support ARM platform

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.9.0
    • C++
    • None

    Description

      Below is the issue report link:

      https://github.com/apache/orc/issues/1534

      Some functions in CpuInfoUtil.cc doesn't support the ARM platform.

      Attachments

        Issue Links

          Activity

            People

              pengwang Peng Wang
              pengwang Peng Wang
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 72h
                  72h
                  Remaining:
                  Remaining Estimate - 72h
                  72h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified