ORC-1447: [C++] Fix a bug in CpuInfoUtil.cc to support ARM platform

### What changes were proposed in this pull request?
To fix a bug reported in #1534
The bug is that some CpuInfoUtil.cc functions don't support the ARM platform. In this PR, try to fix this bug.

### Why are the changes needed?
Currently, ORC can't build success on the ARM platform without this PR.

### How was this patch tested?
We can build ORC on the ARM platform directly to check if it can succeed.
If user enabled -DBUILD_ENABLE_AVX512=ON in the cmake process, it will get the below warning message, and BUILD_ENABLE_AVX512 will be changed back to OFF.
CMake Warning at CMakeLists.txt:183 (message):
Only X86 platform support AVX512

This closes #1542